; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/fmgr/extr_dfmgr.c_RestoreLibraryState.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/fmgr/extr_dfmgr.c_RestoreLibraryState.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @RestoreLibraryState(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  br label %3

3:                                                ; preds = %8, %1
  %4 = load i8*, i8** %2, align 8
  %5 = load i8, i8* %4, align 1
  %6 = sext i8 %5 to i32
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %8, label %16

8:                                                ; preds = %3
  %9 = load i8*, i8** %2, align 8
  %10 = call i32 @internal_load_library(i8* %9)
  %11 = load i8*, i8** %2, align 8
  %12 = call i64 @strlen(i8* %11)
  %13 = add nsw i64 %12, 1
  %14 = load i8*, i8** %2, align 8
  %15 = getelementptr inbounds i8, i8* %14, i64 %13
  store i8* %15, i8** %2, align 8
  br label %3

16:                                               ; preds = %3
  ret void
}

declare dso_local i32 @internal_load_library(i8*) #1

declare dso_local i64 @strlen(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
